--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ scikit-learn==1.7.2
 Pillow==12.0.0
 requests==2.32.5
 webdriver-manager==4.0.2
+
+# Neural Network Sentiment Analysis (DistilBERT)
+transformers>=4.35.0
+torch>=2.0.0
+datasets>=2.14.0
