--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
-selenium==4.38.0
-pandas==2.3.3
-numpy==2.3.4
-scikit-learn==1.7.2
-Pillow==12.0.0
-requests==2.32.5
-webdriver-manager==4.0.2
+selenium>=4.15.0
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+Pillow>=10.0.0
+requests>=2.31.0
+webdriver-manager>=4.0.0
 
 # Neural Network Sentiment Analysis (DistilBERT)
 transformers>=4.35.0
 torch>=2.0.0
 datasets>=2.14.0
+
+# UMAP for Dimensionality Reduction
+umap-learn>=0.5.4
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Power Monitoring
+psutil>=5.9.0
+gputil>=1.4.0
+
+# Additional utilities
+tqdm>=4.65.0
